[project]
name = "android"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Magniquick", email = "67406856+Magniquick@users.noreply.github.com" },
]
license = { text = "GPL-3.0-or-later" }
requires-python = "<4.0,>=3.10"
dependencies = [
    "requests<3.0.0,>=2.32.3",
    "cryptography<46.0.0,>=45.0.0",
    "lxml<6.0.0,>=5.3.0",
    "python-dotenv<2.0.0,>=1.0.1",
]
optional-dependencies = { dev = [
    "types-requests<3.0.0.0,>=2.32.0.20241016",
    "lxml-stubs<1.0.0,>=0.5.1",
] }

